--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <script src="script.js" defer></script>
 </head>
 
-<body onload="init()" style="padding-bottom:20px;!important">
+<body onload="init()" style="padding-bottom:20px!important">
     <div class="main_div">
         <textarea id="output_screen" class="output_area" readonly="readonly">0</textarea>
 
